fixup after 4th review